<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.masanori_acer.neverforget.MemorialFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:text="@string/title_memorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/wedding"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tviewWedding" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/etextWedding"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/birthday"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tviewBirthday" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/etextBirthday"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/birthday1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tviewBirthday1" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/etextBirthday1"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/birthday2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tviewBirthday2" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/etextBirthday2"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/birthday3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tviewBirthday3" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/etextBirthday3"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
